# ptyopen

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  autoboot  config.h.in  configure  configure.ac  configure.in  ptyopen.1  ptyopen.1.html  ptyopen.c  ptyopen.spec
debian/: changelog  control  copyright  rules
